--- a/PNGS.ipynb
+++ b/PNGS.ipynb
@@ -103,35 +103,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "87 88\n",
-      "132 133\n",
-      "136 144\n",
-      "145 156\n",
-      "149 160\n",
-      "181 190_2\n",
-      "191 197\n",
-      "224 230\n",
-      "228 234\n",
-      "235 241\n",
-      "256 262\n",
-      "270 276\n",
-      "283 289\n",
-      "295 301\n",
-      "327 334\n",
-      "328 335\n",
-      "332 339\n",
-      "348 356\n",
-      "378 386\n",
-      "388 403\n",
-      "391 406\n",
-      "422 442\n",
-      "426 446\n",
-      "444 463\n",
-      "592 611\n",
-      "597 616\n",
-      "606 625\n",
-      "618 637\n",
-      "655 674\n"
+      "88\n",
+      "133\n",
+      "144\n",
+      "156\n",
+      "160\n",
+      "190_2\n",
+      "197\n",
+      "230\n",
+      "234\n",
+      "241\n",
+      "262\n",
+      "276\n",
+      "289\n",
+      "301\n",
+      "334\n",
+      "335\n",
+      "339\n",
+      "356\n",
+      "386\n",
+      "403\n",
+      "406\n",
+      "442\n",
+      "446\n",
+      "463\n",
+      "611\n",
+      "616\n",
+      "625\n",
+      "637\n",
+      "674\n"
      ]
     }
    ],
@@ -144,17 +144,54 @@
     "matches = re.finditer('N(?=[A-OQ-Z][TS])', CAP45_env_aa)\n",
     "for match in matches:\n",
     "    PNGS.append({'name':'CAP45' , 'pos':CAP45_HXB2[match.start()+1], 'pres':0})\n",
-    "    print match.start()+1,CAP45_HXB2[match.start()+1]"
+    "    #print match.start()+1,\n",
+    "    print CAP45_HXB2[match.start()+1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88\n",
+      "135\n",
+      "139\n",
+      "145\n",
+      "156\n",
+      "160\n",
+      "187\n",
+      "197\n",
+      "234\n",
+      "241\n",
+      "262\n",
+      "276\n",
+      "289\n",
+      "295\n",
+      "301\n",
+      "332\n",
+      "339\n",
+      "355\n",
+      "393\n",
+      "406\n",
+      "442\n",
+      "448\n",
+      "461\n",
+      "464_2\n",
+      "611\n",
+      "616\n",
+      "624\n",
+      "625\n",
+      "637\n"
+     ]
+    }
+   ],
    "source": [
     "# Find Du156_HXB2 dict\n",
     "Du156_HXB2 = Build_Ref_dict(Du156_env_aa, HXB2_env_aa)\n",
@@ -163,7 +200,8 @@
     "matches = re.finditer('N(?=[A-OQ-Z][TS])', Du156_env_aa)\n",
     "for match in matches:\n",
     "    PNGS.append({'name':'Du156' , 'pos':Du156_HXB2[match.start()+1], 'pres':0})\n",
-    "    #print match.start()+1, Du156_HXB2[match.start()+1]"
+    "    #print match.start()+1, \n",
+    "    print Du156_HXB2[match.start()+1]"
    ]
   },
   {
